testsuite/good/core011.jl
/* Test pushing -1. */

int main() {
  printInt(-1);
  return 0 ;
}